--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "react": "18.2.0",
     "react-native": "0.72.10",
     "react-native-vector-icons": "^10.0.0"
